--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=290b2947dd50073e649ec1247ae15212"></script>
     <title>Our Food List</title>
   </head>
   <body>
