--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=290b2947dd50073e649ec1247ae15212"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=77d18f762cefcfd4e6d6a32b4ae62e8e"
+    ></script>
     <title>Our Food List</title>
   </head>
   <body>
