kakao api 동적 생성

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script
+    <!-- <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=77d18f762cefcfd4e6d6a32b4ae62e8e"
-    ></script>
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOAPI_KEY%"
+    ></script> -->
     <title>Our Food List</title>
   </head>
   <body>
