--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <script
+    <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOAPI_KEY%"
-    ></script> -->
+    ></script>
     <title>Our Food List</title>
   </head>
   <body>
